add config to enable ZGC and aot (to be enabled later)